--- a/linux/hypr/hyprpaper.conf
+++ b/linux/hypr/hyprpaper.conf
@@ -1,6 +1,6 @@
-preload = /home/lucian/wallpaper/green_sea.jpg
+preload = /home/lucian/.lucian.config/green_sea.jpg
 #if more than one preload is desired then continue to preload other backgrounds
 
 #set the default wallpaper(s) seen on inital workspace(s) --depending on the number of monitors used
-wallpaper = ,/home/lucian/wallpaper/green_sea.jpg
+wallpaper = ,/home/lucian/.lucian.config/green_sea.jpg
 #if more than one monitor in use, can load a 2nd image
